--- a/templates/admin_main.html
+++ b/templates/admin_main.html
@@ -8,7 +8,7 @@
 <option value="{{dlr1.name}}">{{dlr1.name}}</option>
 {%endfor%}
 </select>
-<button onclick="value">Submit</button>
+<button onclick="value()">Submit</button>
 
 <!-- <form action="" method="POST" id="signupform">
 Username: <input type = 'text' name='username' placeholder="Username" id = 'username'><br>
@@ -18,33 +18,6 @@ Username: <input type = 'text' name='username' placeholder="Username" id = 'user
 <!-- {% if flash %}
 	<strong>{{flash}}</strong>
 {% endif %} -->
-<script>
-function value()
-{
-	console.log("In value.YO!!");
-	var dlr=document.getElementById("dealers").value;
-	console.log(dlr);
-	$.ajax({
-			type:"GET",//Check and change it to GET
-			url:"/ajax_admin",
-			data: {dealer: dlr},
-
-			success: function(answer)
-			{
-				console.log(answer);
-				//console.log(answer.comments,answer.id1);
-				alert("Change Ackonowledge");
-			},
-			error: function(err)
-			{
-				console.log(err);
-				alert(err);
-				alert("Error");
-			}
-		});
-
-
-}
-
+<script type="text/javascript" src="{{url_for('static',filename='value.js')}}">
 </script>
 {%endblock%}
