--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <html>
 <title>{{title}}</title>
 <body>
-<h1>Abhinav Rai's creation</h1><br>
+<h1>Abhinav Rai's Creation</h1><br>
 {% block content %}{% endblock %}
 <br><br>
 <strong><u>
