--- a/templates/admin_main.html
+++ b/templates/admin_main.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
-{% block content %}
-<h2>Welcome Admin</h2>
+<html>
+<title>{{title}}
+</title>
+<body>
+<h4>Welcome Admin</h4>
 <form action="" method="POST" id="adminform" name="myForm">
 <select name="dealers">
 {% for dlr1 in dlr %}
@@ -30,6 +32,9 @@
 {%endfor%}
 {%endif%}
 </table>
+<br>
+<a href="/admin_logout" class="waves-effect waves-light btn">Logout</a>
+
 <!-- <form action="" method="POST" id="signupform">
 Username: <input type = 'text' name='username' placeholder="Username" id = 'username'><br>
 	Password: <input type = 'password' name='password' placeholder="Password" id = 'password'><br>
@@ -38,5 +43,5 @@ Username: <input type = 'text' name='username' placeholder="Username" id = 'user
 <!-- {% if flash %}
 	<strong>{{flash}}</strong>
 {% endif %} -->
-
-{%endblock%}
+</body>
+</html>
