--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
 <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='css/materialize.css')}}"  media="screen,projection"/>
 </head>
 <body>
-<h2>Abhinav Rai's Creation</h2><br>
+<center>
+<h2>Abhinav Rai's Creation</h2></center><br>
 {% block content %}{% endblock %}
 <br><br>
 <strong><u>
