--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<center>
 <a href="/signup"><button>Signup</button></a><br>
-<a href="/login"><button>Login</button></a>
+<br><br><a href="/login"><button>Login</button></a>
+</center>
 {%endblock%}
