Removed flash message Logged in

--- a/templates/admin_main.html
+++ b/templates/admin_main.html
@@ -2,7 +2,7 @@
 <title>{{title}}
 </title>
 <body>
-<h4>Welcome Admin</h4>
+<h2>Welcome Admin</h2>
 <form action="" method="POST" id="adminform" name="myForm">
 <select name="dealers">
 {% for dlr1 in dlr %}
@@ -11,7 +11,7 @@
 </select>
 <input type="submit" value="Submit">
 </form>
-
+<h3> Dealer {{dealer}}</h3>
 <table border="1px">
 <tr>
 	<td><b>Name</b></td>
