Sign up form updated.

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,7 @@
 {{message}}
 {%endfor%}</u>
 </strong>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script type="text/javascript" src="{{url_for('static',filename='js/materialize.js')}}"></script>
-<script>
-	$(document).ready(function() {
-    $('select').material_select();
-});
-</script>
 </body>
 </html>
